--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Arpit Tiwari — Frontend & AI Developer</title>
   
   <meta name="description" content="Arpit Tiwari's portfolio. A frontend developer specializing in modern web experiences and AI-powered products using React, JavaScript, and Python.">
-  
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 
   <link rel="stylesheet" href="resume.css">
@@ -14,12 +13,8 @@
 </head>
 <body>
 
-  <div class="preloader">
-      <div class="preloader-logo">AT</div>
-  </div>
-
+  <div class="preloader"><div class="preloader-logo">AT</div></div>
   <div id="canvas-container"></div>
-
   <div class="cursor-dot"></div>
   <div class="cursor-circle"></div>
 
@@ -33,6 +28,8 @@
               <li><a href="#projects" class="nav-link">Projects</a></li>
               <li><a href="#contact" class="nav-link">Contact</a></li>
           </ul>
+          <a href="assets/Arpit_Tiwari_Resume.pdf" download="Arpit_Tiwari_Resume.pdf" class="btn resume-btn magnetic">Download Resume</a>
+          
           <button id="theme-toggle" class="theme-toggle magnetic" aria-label="Toggle theme">
               <svg class="sun" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.894 6.106a.75.75 0 010 1.06l-1.591 1.591a.75.75 0 11-1.06-1.06l1.591-1.591a.75.75 0 011.06 0zm-11.45 11.45a.75.75 0 011.06 0l1.591 1.591a.75.75 0 01-1.06 1.06l-1.591-1.591a.75.75 0 010-1.06zM21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75zM3.75 12a.75.75 0 01-.75.75H.75a.75.75 0 010-1.5h2.25a.75.75 0 01.75.75zM6.106 18.894a.75.75 0 011.06 0l1.591-1.591a.75.75 0 011.06 1.06l-1.591 1.591a.75.75 0 01-1.06 0zM18.894 7.166a.75.75 0 01-1.06-1.06l1.591-1.591a.75.75 0 111.06 1.06l-1.591 1.591z"/></svg>
               <svg class="moon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path fill-rule="evenodd" d="M9.528 1.718a.75.75 0 01.162.819A8.97 8.97 0 009 6a9 9 0 009 9 8.97 8.97 0 004.472-.69a.75.75 0 01.82.162l.805.806a.75.75 0 01-.162.82a10.48 10.48 0 01-5.596 3.053A10.5 10.5 0 019 19.5a10.5 10.5 0 01-10.282-9.972A10.48 10.48 0 011.718 3.99l.806-.805a.75.75 0 01.82.162z" clip-rule="evenodd" /></svg>
@@ -44,9 +41,7 @@
   <main id="main-content">
     <section class="hero-container" id="about">
       <div class="hero-content">
-        <div class="hero-image magnetic">
-            <img src="assets/profile.jpg" alt="Arpit Tiwari">
-        </div>
+        <div class="hero-image magnetic"><img src="assets/profile.jpg" alt="Arpit Tiwari"></div>
         <div class="hero-text">
           <h1 class="hero-title"><span class="line">Hello — I'm Arpit Tiwari</span></h1>
           <p class="subtitle"><span class="line">I design & build modern web experiences and AI-powered products.</span></p>
@@ -56,6 +51,18 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <section id="about-me" class="content-section reveal">
+        <h2>About Me</h2>
+        <div class="about-content">
+            <p>
+                I'm a third-year Computer Science student with a passion for the intersection of creative design and intelligent technology. I believe the most impactful products are not just functional, but also intuitive and beautiful. This fascination with user experience and AI drives me to explore tools like Figma for design and Python for machine learning applications.
+            </p>
+            <p>
+                This passion led me to build projects like 'Bade Bhaiya', an AI-powered guidance platform, where I could apply both my design and development skills to solve a real-world problem. I'm constantly learning and am currently seeking internship opportunities where I can contribute to innovative projects and continue to grow as a developer.
+            </p>
+        </div>
     </section>
     
     <section id="experience" class="content-section reveal">
@@ -85,19 +92,35 @@
         <div class="skills-grid">
             <div class="skill-category">
                 <h3>Languages</h3>
-                <ul><li>C++</li><li>Python</li><li>JavaScript (ES6+)</li></ul>
+                <ul class="skill-list">
+                    <li><img src="assets/icons/cplusplus.svg" alt="C++ Icon" class="skill-icon"> C++</li>
+                    <li><img src="assets/icons/python.svg" alt="Python Icon" class="skill-icon"> Python</li>
+                    <li><img src="assets/icons/javascript.svg" alt="JavaScript Icon" class="skill-icon"> JavaScript</li>
+                </ul>
             </div>
             <div class="skill-category">
                 <h3>Frontend</h3>
-                <ul><li>HTML5 & CSS3</li><li>React</li><li>GSAP</li><li>Three.js</li></ul>
+                <ul class="skill-list">
+                    <li><img src="assets/icons/html5.svg" alt="HTML5 Icon" class="skill-icon"> HTML5</li>
+                    <li><img src="assets/icons/css3.svg" alt="CSS3 Icon" class="skill-icon"> CSS3</li>
+                    <li><img src="assets/icons/react.svg" alt="React Icon" class="skill-icon"> React</li>                    <li><img src="assets/icons/threejs.svg" alt="Three.js Icon" class="skill-icon"> Three.js</li>
+                </ul>
             </div>
             <div class="skill-category">
                 <h3>Backend & DB</h3>
-                <ul><li>Firebase</li><li>MongoDB</li><li>PostgreSQL</li></ul>
+                <ul class="skill-list">
+                    <li><img src="assets/icons/firebase.svg" alt="Firebase Icon" class="skill-icon"> Firebase</li>
+                    <li><img src="assets/icons/mongodb.svg" alt="MongoDB Icon" class="skill-icon"> MongoDB</li>
+                    <li><img src="assets/icons/postgresql.svg" alt="PostgreSQL Icon" class="skill-icon"> PostgreSQL</li>
+                </ul>
             </div>
             <div class="skill-category">
                 <h3>Tools & AI</h3>
-                <ul><li>Git & GitHub</li><li>Figma</li><li>n8n</li><li>OpenAI API</li></ul>
+                <ul class="skill-list">
+                    <li><img src="assets/icons/git.svg" alt="Git Icon" class="skill-icon"> Git</li>
+                    <li><img src="assets/icons/github.svg" alt="GitHub Icon" class="skill-icon"> GitHub</li>
+                    <li><img src="assets/icons/figma.svg" alt="Figma Icon" class="skill-icon"> Figma</li>
+                    <li><img src="assets/icons/n8n.svg" alt="n8n Icon" class="skill-icon"> n8n</li>                </ul>
             </div>
         </div>
     </section>
@@ -117,7 +140,7 @@
       <h2>Get In Touch</h2>
       <p class="muted">Have a question or a project in mind? Let's connect.</p>
       <form id="contact-form" action="https://api.web3forms.com/submit" method="POST">
-        <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE">
+        <input type="hidden" name="access_key" value="9a6dedc7-afe3-4a5d-a2f1-12c93dab498e">
         <div class="form-row">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
@@ -129,7 +152,6 @@
   </main>
 
   <footer class="main-footer"><p>© 2025 Arpit Tiwari</p></footer>
-  
   <a id="back-to-top" class="back-to-top magnetic" href="#about" aria-label="Back to top">↑</a>
 
   <div class="modal" id="modal-bade-bhaiya">
